Testing commiting in visual studio

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
             <div class="col align-self-start d-flex flex-column justify-content-center">
                 <span class="title-main mt-5">FOOTPRINT</span><br />
-                <span class="title-sub">A Nike Store</span>
+                <span class="title-sub">A Nike Store....</span>
             </div>
             <div class="col align-self-center mt-5 sayings">" Where Every Purchase Leaves A Mark. "</div>
             <div class="col pt-5 pb-5">
