--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
         <a class="navbar-brand" href="@Url.Action("Index","Home")">
             <div class="container ms-3"><i class="fa-solid fa-shoe-prints"> FOOTPRINT</i></div>
         </a>
-        <div class="" id="cartIcon">
-            <a class="nav-link fw-bold ms-2" href="#">
+        <div class="destination" id="cartIcon">
+            <a class="nav-link fw-bold ms-2 " href="#">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span id="cartCounter" class="badge bg-danger">0</span>
             </a>
